# contraindication_prototype

./: .gitignore  README.md  modularity.md  pyproject.toml
docs/: google-apps-script.js  index.html
src/frontend/styleguide/: sumplexity_design_system.html
src/shared/: config.py
taskdocs/: contraindication_brief.md  current_task.md  redesign-spec.md  research.md
