[project]
name = "project_template"
version = "0.1.0"
description = "SaaS with multiple services and shared code"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
shared = [
    "httpx",
]
example_service = [
    "fastapi",
    "uvicorn[standard]",
]
ui = [
    "streamlit",
]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
